--- a/source/sass/flag-list.scss
+++ b/source/sass/flag-list.scss
@@ -7,10 +7,9 @@
 
 .flag-list--index {
   position: absolute;
+  left: 0;
+  right: 0;
   top: -44px;
-  left: 50%;
-  transform: translateX(-50%);
-  justify-content: flex-start;
 }
 
 .flag-list--catalog {
@@ -29,7 +28,7 @@
 
 .flag-list__item {
   @include flex;
-  margin-right: 14px;
+  margin-right: 21px;
   position: relative;
 
   &:last-child {
