--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -11,7 +11,7 @@
   }
 
   &:active {
-    opacity: 0.3;
+    color: $basic-blue-opacity;
   }
 }
 
@@ -21,15 +21,16 @@
   width: 100%;
   font-weight: bold;
   font-size: 18px;
-  line-height: 18px;
   border-radius: 10px;
-  padding: 24px 21px 20px 23px;
+  padding: 25px 22px 23px 23px;
+  line-height: 13px;
 
   @media (min-width: $tablet-width) {
-    padding: 29px 37px 27px 31px;
+    padding: 28px 38px 28px 31px;
     font-size: 24px;
     line-height: 24px;
     border-radius: 20px;
+    align-items: center;
   }
 }
 
@@ -56,6 +57,15 @@
   line-height: 16px;
   background-color: inherit;
 
+  &:hover {
+    background-color: inherit;
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
@@ -64,12 +74,12 @@
 
 .button--register {
   border-radius: 10px;
-  padding: 22px 23px 21px 24px;
+  padding: 25px 21px 20px 28px;
   font-size: 16px;
 
   @media (min-width: $tablet-width) {
     border-radius: 0 20px 20px 0;
-    padding: 34px 34px 28px 34px;
+    padding: 36px 35px 27px 35px;
   }
 
   @media (min-width: $desktop-width) {
@@ -87,16 +97,26 @@
   width: 100%;
   border: 3px solid $special-midnight;
   border-radius: 10px;
-  padding: 19px;
+  padding: 22px 19px 21px 19px;
   font-weight: bold;
   font-size: 18px;
-  line-height: 18px;
+  line-height: 13px;
+
+  &:hover {
+    color: $white;
+    background-color: $basic-blue;
+  }
+
+  &:active {
+    color: $basic-white-opacity;
+  }
 
   @media (min-width: $tablet-width) {
-    padding: 29px 31px 23px 37px;
+    padding: 27px 32px 23px 35px;
     font-size: 24px;
     line-height: 24px;
     border-radius: 20px;
+    align-items: center;
   }
 
   @media (min-width: $desktop-width) {
