--- a/source/sass/contact-list.scss
+++ b/source/sass/contact-list.scss
@@ -43,18 +43,61 @@
 
 .contact-list__link {
   @include flex;
+  @include flex-center;
 
+  width: 40px;
+  height: 40px;
   align-items: center;
   font-weight: bold;
   line-height: 18px;
+  background-color: $basic-yellow;
+  border-radius: 50%;
+
+  &:hover {
+    color: $special-orange;
+  }
+
+  &:active {
+    color: $basic-yellow-opacity;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 50px;
+    height: 50px;
+  }
 }
 
-.contact-list__link--yellow {
+.contact-list__link--interested-section {
+  width: auto;
+  height: auto;
+  justify-content: flex-start;
+  position: relative;
   color: $basic-yellow;
+  background-color: inherit;
+}
+
+.contact-list__link--phone {
+  background-color: $special-orange;
+
+  &:hover {
+    background-color: $special-orange-hover;
+  }
+}
+
+.contact-list__link--phone:active .contact-list__image {
+  opacity: 0.3;
 }
 
 .contact-list__link--mail {
-  margin-top: -5px;
+  background-color: $special-orange-light;
+
+  &:hover {
+    background-color: $special-orange;
+  }
+}
+
+.contact-list__link--mail:active .contact-list__image {
+  opacity: 0.3;
 }
 
 .contact-list__text {
@@ -63,17 +106,49 @@
   }
 }
 
-.contact-list__image {
-  margin-right: 17px;
+.contact-list__link--menu {
+  justify-content: flex-start;
+
+  &:hover {
+    background-color: inherit;
+    color: $special-orange;
+  }
+
+  &:hover .contact-list__icon-container--menu {
+    color: $special-orange;
+  }
+
+  &:active {
+    color: $basic-yellow-opacity;
+  }
+
+  &:active .contact-list__icon-container--menu {
+    color: $basic-yellow-opacity;
+  }
+
+  @media (min-width: $mobile-width) and (max-width: 1439px) {
+    position: relative;
+    width: auto;
+    height: auto;
+    background-color: inherit;
+  }
 
   @media (min-width: $desktop-width) {
-    width: 50px;
-    height: 50px;
-    margin: 0;
+    justify-content: center;
+  }
+}
+
+.contact-list__image--menu {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: initial;
   }
 }
 
 .contact-list__item--interested-section {
+  padding: 0;
+
   @media (min-width: $tablet-width) {
     margin-bottom: 0;
   }
@@ -95,32 +170,47 @@
   flex-basis: auto;
 }
 
-.contact-list__svg--phone-icon {
-  fill: $special-orange;
-
-  &:hover {
-    fill: $special-orange-hover;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
-}
-
-.contact-list__svg--envelop-icon {
-  fill: $special-orange-light;
-
-  &:hover {
-    fill: $special-orange;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
-}
-
 .contact-list--menu-open {
   @media (min-width: $mobile-width) and (max-width: 1439px) {
     margin-bottom: 113px;
+  }
+}
+
+.contact-list__icon-container {
+  @include flex;
+  @include flex-center;
+
+  width: 45px;
+  height: 45px;
+  margin-right: 16px;
+  background-color: $special-blue-bg;
+  border-radius: 50%;
+
+  @media (min-width: $tablet-width) {
+    width: 68px;
+    height: 68px;
+    margin-right: 23px;
+  }
+}
+
+.contact-list__icon {
+  @media (min-width: $tablet-width) {
+    width: 37px;
+    height: 37px;
+  }
+}
+
+.contact-list__icon--old-phone {
+  @media (min-width: $tablet-width) {
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.contact-list__icon-container--menu {
+  color: $basic-yellow;
+
+  @media (min-width: $desktop-width) {
+    display: none;
   }
 }
