--- a/source/sass/directions.scss
+++ b/source/sass/directions.scss
@@ -9,9 +9,11 @@
 
   @media (min-width: $tablet-width) {
     padding: 95px 76px 80px 76px;
-    background-image: url("../img/flags-back.png");
-    background-repeat: no-repeat;
-    background-position: top 140px right 40px;
+    background-image: url("../img/flags-back.png"), url("../img/rectangle-directions-bg-tablet.svg");
+    background-repeat: no-repeat, no-repeat;
+    background-position:
+      top 140px right 40px,
+      top 466px left 40px;
     border-radius: 0 0 60px 60px;
     margin-top: -60px;
   }
@@ -29,10 +31,10 @@
 
 .directions__list {
   grid-template-columns: 1fr;
-  padding-bottom: 12px;
+  padding-bottom: 16px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 26px;
+    margin-bottom: 21px;
   }
 
   @media (min-width: $desktop-width) {
@@ -65,12 +67,13 @@
   grid-row: 2 / -1;
   justify-content: space-between;
   align-items: center;
-  padding: 27px 24px 18px 24px;
+  padding: 26px 24px 23px 24px;
   border-radius: 10px;
   background-color: $white;
 
   @media (min-width: $tablet-width) {
     border-radius: 20px 0 0 20px;
+    padding: 25px 24px 23px 29px;
     grid-row: 1;
   }
 
@@ -80,7 +83,11 @@
 }
 
 .directions__content--czech {
-  padding-bottom: 0;
+  padding: 26px 33px 5px 24px;
+
+  @media (min-width: $tablet-width) {
+    padding: 27px 33px 5px 29px;
+  }
 }
 
 .directions__heading {
@@ -123,7 +130,7 @@
   margin-bottom: 59px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 102px;
+    margin-bottom: 104px;
   }
 
   @media (min-width: $desktop-width) {
@@ -133,13 +140,13 @@
 }
 
 .directions__text {
-  font-weight: 300;
+  font-weight: 500;
+  line-height: 18px;
   margin: 0;
   color: $special-grey-opacity;
   flex-basis: 100%;
 
   @media (min-width: $tablet-width) {
-    font-weight: 500;
     font-size: 20px;
     line-height: 20px;
   }
@@ -153,9 +160,22 @@
   color: $special-grey-opacity;
 
   @media (min-width: $tablet-width) {
+    position: relative;
+    bottom: -8px;
+    left: -2px;
     flex-basis: 100%;
     order: 3;
     justify-content: flex-start;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+.directions__counter--czech {
+  @media (min-width: $tablet-width) {
+    top: -10px;
+    left: -3px;
   }
 }
 
@@ -174,6 +194,23 @@
   @media (min-width: $desktop-width) {
     right: -34px;
     top: 36%;
+  }
+}
+
+.directions__image-container {
+  padding-top: 110px;
+  grid-row: 1 / 3;
+  grid-column: 1;
+  background-repeat: no-repeat;
+  background-size: 100%;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 2;
+    grid-row: 1;
+    border-radius: 0 20px 20px 0;
+    padding: 70px 93px 70px 92px;
+    background-size: cover;
+    background-position: center;
   }
 }
 
@@ -201,31 +238,16 @@
   }
 }
 
-.directions__image-container {
-  padding-top: 110px;
-  grid-row: 1 / 3;
-  grid-column: 1;
-  background-repeat: no-repeat;
-  background-size: 100%;
-
-  @media (min-width: $tablet-width) {
-    grid-column: 2;
-    grid-row: 1;
-    border-radius: 0 20px 20px 0;
-    padding: 140px 184px 0 0;
-    background-size: cover;
-    background-position: center;
-  }
-}
-
 .directions__link {
-  padding: 24px 21px 20px 23px;
+  padding: 25px 22px 23px 23px;
+  line-height: 14px;
 
   @media (min-width: $tablet-width) {
     font-size: 24px;
     line-height: 24px;
-    padding: 32px 29px 26px 32px;
+    padding: 31px 30px 27px 32px;
     border-radius: 20px;
+    align-items: center;
   }
 
   @media (min-width: $desktop-width) {
@@ -235,5 +257,14 @@
     align-self: center;
     position: relative;
     top: -5px;
+  }
+}
+
+.directions__icon {
+  margin-right: 7px;
+
+  @media (min-width: $tablet-width) {
+    width: 24px;
+    height: 24px;
   }
 }
