--- a/source/sass/how-to-find.scss
+++ b/source/sass/how-to-find.scss
@@ -4,13 +4,13 @@
   z-index: 2;
   background-color: $basic-yellow;
   color: $basic-blue-dark;
-  padding: 49px 25px 34px 25px;
+  padding: 45px 25px 35px 25px;
   border-radius: 0 0 31px 31px;
 
   @media (min-width: $tablet-width) {
     padding: 103px 75px 83px 75px;
     margin-top: -61px;
-    border-radius: 0 0 61px 61px;
+    border-radius: 0 0 60px 60px;
   }
 
   @media (min-width: $desktop-width) {
@@ -30,12 +30,12 @@
   text-transform: uppercase;
   font-size: 16px;
   line-height: 22px;
-  margin-bottom: 15px;
+  margin-bottom: 18px;
 
   @media (min-width: $tablet-width) {
     font-size: 28px;
     line-height: 28px;
-    margin-bottom: 33px;
+    margin-bottom: 34px;
   }
 
   @media (min-width: $desktop-width) {
@@ -45,6 +45,41 @@
 }
 
 .how-to-find__street {
+  position: relative;
+  padding-left: 61px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    background-color: $special-blue-bg;
+    background-image: url("../img/icon-location.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 14px 22px;
+    border-radius: 50%;
+    left: 0;
+
+    @media (min-width: $tablet-width) {
+      top: -22px;
+      width: 68px;
+      height: 68px;
+      background-size: 32px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 90px;
+      height: 90px;
+      background-size: 42px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    background-size: 21px 31px;
+    padding-left: 94px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-top: 7px;
   }
