--- a/source/sass/interested.scss
+++ b/source/sass/interested.scss
@@ -5,10 +5,10 @@
   background-color: $special-midnight;
   text-align: center;
   border-radius: 0 0 30px 30px;
-  padding: 82px 25px 24px 25px;
+  padding: 82px 25px 29px 25px;
 
   @media (min-width: $tablet-width) {
-    padding: 101px 75px 60px 75px;
+    padding: 103px 75px 59px 75px;
     border-radius: 0 0 60px 60px;
     margin-top: -61px;
   }
@@ -24,17 +24,20 @@
   @media (min-width: $tablet-width) {
     font-size: 45px;
     line-height: 45px;
-    margin-bottom: 57px;
+    margin: 34px 0;
   }
 }
 
 .interested__text {
   margin-bottom: 16px;
+  font-weight: 300;
+  padding-right: 8px;
 
   @media (min-width: $tablet-width) {
     font-size: 28px;
     line-height: 32px;
-    margin-bottom: 64px;
+    margin-bottom: 65px;
+    padding-top: 25px;
     font-weight: 300;
   }
 
@@ -45,7 +48,9 @@
 
 .interested__text--questions {
   @media (min-width: $tablet-width) {
-    margin-bottom: 39px;
+    margin-bottom: 41px;
+    letter-spacing: 0.01em;
+    padding-right: 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -57,4 +62,12 @@
 
 .interested__button {
   color: $basic-yellow;
+
+  &:hover {
+    color: $special-orange;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
