--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -12,7 +12,7 @@
     @include flex;
 
     justify-content: space-between;
-    padding: 47px 40px 0 40px;
+    padding: 51px 40px 0 40px;
     margin-top: -77px;
     border-radius: 61px 61px 0 0;
   }
@@ -43,12 +43,15 @@
   align-items: center;
   flex-basis: 50%;
   border-top: 1px solid rgba($black, 0.05);
-  padding-top: 8px;
+  padding-top: 13px;
+  margin-top: 2px;
 
   @media (min-width: $tablet-width) {
     justify-content: flex-end;
     flex-basis: unset;
     border: none;
+    padding-top: 0;
+    margin-top: -5px;
   }
 
   @media (min-width: $desktop-width) {
@@ -60,6 +63,6 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
-    margin-right: 29px;
+    margin-right: 24px;
   }
 }
