--- a/source/sass/register-form.scss
+++ b/source/sass/register-form.scss
@@ -7,7 +7,7 @@
   margin-bottom: 30px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 60px;
+    margin-bottom: 33px;
   }
 
   @media (min-width: $tablet-width) {
@@ -24,7 +24,21 @@
   font-size: 18px;
   line-height: 18px;
   color: rgba($special-grey, 0.3);
-  padding: 20px 20px 19px 20px;
+  padding: 20px 14px 19px 25px;
+
+
+  &:hover::placeholder {
+    color: $special-grey;
+  }
+
+  &:focus {
+    color: $white;
+    background-color: $special-midnight;
+  }
+
+  &:focus::placeholder {
+    color: $white;
+  }
 
   @media (min-width: $tablet-width) {
     padding: 28px 36px;
