--- a/source/sass/user-price.scss
+++ b/source/sass/user-price.scss
@@ -1,6 +1,6 @@
 .user-price__list {
-  padding: 27px 0 15px 0;
-  margin-bottom: 22px;
+  padding: 22px 0 15px 0;
+  margin-bottom: 17px;
 
   @media (min-width: $tablet-width) {
     font-size: 28px;
@@ -31,7 +31,7 @@
   @include flex;
 
   justify-content: space-between;
-  padding-bottom: 6px;
+  padding-bottom: 10px;
 
   @media (min-width: $tablet-width) {
     padding: 0;
@@ -41,14 +41,20 @@
 .user-price__text {
   flex-grow: 2;
   border-top: 1px solid rgba($black, 0.05);
-  padding-top: 7px;
+  padding-top: 10px;
 
   &:last-child {
     border-bottom: 1px solid rgba($black, 0.05);
   }
 
   @media (min-width: $tablet-width) {
-    padding: 20px 0 0 0;
+    padding: 18px 0 0 0;
+  }
+}
+
+.user-price__text--custom-card-color {
+  @media (min-width: $tablet-width) {
+    padding-top: 15px;
   }
 }
 
@@ -61,7 +67,7 @@
     min-width: 198px;
     box-sizing: border-box;
     text-align: center;
-    padding: 20px 0;
+    padding: 26px 0 20px 10px;
     flex-basis: initial;
     background-color: $special-blue-grey-light;
   }
@@ -71,16 +77,40 @@
   }
 }
 
-.user-price__price--basic-price::before {
+.user-price__price--basic-price {
+
+  margin-top: -5px;
+
+  &::before {
+    @media (min-width: $tablet-width) {
+      display: block;
+      content: "";
+      position: absolute;
+      width: 100%;
+      left: 0;
+      top: -35px;
+      height: 41px;
+      border-radius: 20px 20px 0 0;
+      background-color: $special-blue-grey-light;
+    }
+  }
+}
+
+.user-price__price--first-position-price {
+  margin-top: -4px;
+
   @media (min-width: $tablet-width) {
-    display: block;
-    content: "";
-    position: absolute;
-    width: 100%;
-    top: -41px;
-    height: 41px;
-    border-radius: 20px 20px 0 0;
-    background-color: $special-blue-grey-light;
+    margin-top: -8px;
+    padding-left: 0;
+  }
+}
+
+.user-price__price--custom-price {
+  margin-top: -4px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: -8px;
+    padding-left: 0;
   }
 }
 
@@ -104,12 +134,14 @@
   width: 34px;
   height: 34px;
   border-radius: 50%;
+  margin-top: 4px;
 
   @media (min-width: $tablet-width) {
     order: -1;
     width: 68px;
     height: 68px;
     margin-right: 22px;
+    margin-top: 0;
   }
 }
 
@@ -130,6 +162,10 @@
 
   @media (min-width: $tablet-width) {
     display: block;
+    border-radius: 50%;
+    width: 68px;
+    height: 68px;
+    background-color: $special-blue-grey-light;
     margin-right: 20px;
   }
 }
