--- a/source/sass/business-rates.scss
+++ b/source/sass/business-rates.scss
@@ -14,6 +14,18 @@
   @media (min-width: $tablet-width) {
     padding: 54px 0 0 0;
   }
+
+  @media (min-width: $desktop-width) {
+    top: 50%;
+    left: 50%;
+    right: unset;
+    transform: translate(-50%, -50%);
+    width: 750px;
+    height: 526px;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 28px;
+  }
 }
 
 .business-rates__title {
@@ -66,8 +78,16 @@
     font-size: 24px;
     padding: 41px 80px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 13px 80px;
+  }
 }
 
 .business-rates--open {
   display: block;
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+  }
 }
