--- a/source/sass/companions.scss
+++ b/source/sass/companions.scss
@@ -25,6 +25,10 @@
     justify-items: center;
     grid-template-rows: repeat(4, auto);
     padding: 194px 60px 54px 119px;
+    border-radius: 0 0 56px 56px;
+    background-image: url("../img/companions-bg-desktop.png");
+    background-repeat: no-repeat;
+    background-position: top 130px left 60px;
   }
 }
 
@@ -105,6 +109,6 @@
     grid-row: 3;
     grid-column: 1;
     align-self: end;
-    margin-left: 10px;
+    margin-left: 12px;
   }
 }
