--- a/source/sass/directions.scss
+++ b/source/sass/directions.scss
@@ -24,8 +24,9 @@
     grid-template-rows: repeat(3, auto);
     align-items: baseline;
     gap: 0 65px;
-    padding: 219px 130px 101px 130px;
+    padding: 219px 130px 104px 130px;
     background-position: top 148px right 59px;
+    border-radius: 0 0 56px 56px;
   }
 }
 
@@ -88,6 +89,10 @@
   @media (min-width: $tablet-width) {
     padding: 27px 33px 5px 29px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 14px 33px 5px 30px;
+  }
 }
 
 .directions__heading {
@@ -134,7 +139,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 109px;
+    padding: 0 109px 13px 109px;
     margin: 0;
   }
 }
@@ -149,6 +154,16 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: -9px;
+  }
+}
+
+.directions__text--czech {
+  @media (min-width: $desktop-width) {
+    margin-top: -20px;
   }
 }
 
@@ -170,12 +185,22 @@
     font-size: 20px;
     line-height: 20px;
   }
+
+  @media (min-width: $desktop-width) {
+    bottom: -11px;
+    left: 0;
+  }
 }
 
 .directions__counter--czech {
   @media (min-width: $tablet-width) {
     top: -10px;
     left: -3px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 0;
+    left: -1px;
   }
 }
 
@@ -253,7 +278,7 @@
   @media (min-width: $desktop-width) {
     width: 275px;
     margin-left: 110px;
-    padding: 30px 32px 26px 32px;
+    padding: 29px 34px 26px 33px;
     align-self: center;
     position: relative;
     top: -5px;
