--- a/source/sass/social-list.scss
+++ b/source/sass/social-list.scss
@@ -57,7 +57,7 @@
 
   @media (min-width: $desktop-width) {
     display: flex;
-    transform: translateX(50%);
+    transform: translate(50%, -3px);
   }
 }
 
