--- a/source/sass/user-price.scss
+++ b/source/sass/user-price.scss
@@ -93,6 +93,11 @@
       border-radius: 20px 20px 0 0;
       background-color: $special-blue-grey-light;
     }
+
+    @media (min-width: $desktop-width) {
+      top: -43px;
+      height: 44px;
+    }
   }
 }
 
@@ -124,6 +129,11 @@
     height: 41px;
     border-radius: 0 0 20px 20px;
     background-color: $special-blue-grey-light;
+  }
+
+  @media (min-width: $desktop-width) {
+    bottom: -47px;
+    height: 48px;
   }
 }
 
