--- a/source/sass/menu.scss
+++ b/source/sass/menu.scss
@@ -32,7 +32,7 @@
   flex-basis: 100%;
   padding-top: 76px;
 
-  &:before {
+  &::before {
     @media (min-width: $desktop-width) {
       position: absolute;
       left: -90px;
