--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "plans.scss";
 @import "planner.scss";
 @import "pagination.scss";
+@import "pagination-list.scss";
 @import "calendar.scss";
 @import "alphabet.scss";
 @import "continents.scss";
