--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -5,6 +5,7 @@
   background-color: $basic-yellow;
   color: $basic-blue;
   border: none;
+  cursor: pointer;
 
   &:hover {
     background-color: $special-orange-light;
@@ -131,7 +132,7 @@
 .button--change-photo {
   width: 100%;
   padding: 11px;
-  margin: 0 25px 33px 25px;
+  margin: 7px 25px 32px 25px;
   border-radius: 20px;
   text-transform: uppercase;
   text-align: center;
@@ -191,7 +192,7 @@
   font-weight: bold;
   border-radius: 20px;
   margin-bottom: 13px;
-  padding: 6px 39px 4px 39px;
+  padding: 7px 39px 3px 42px;
   font-size: 17px;
   line-height: 30px;
   text-transform: uppercase;
@@ -206,6 +207,17 @@
 
 .button--step-backwards {
   background-color: transparent;
+  padding: 1px 39px 3px 38px;
+  margin-bottom: 0;
+
+  &:hover {
+    background-color: inherit;
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .button--close-flag {
@@ -217,6 +229,37 @@
 
 .button--calendar {
   background-color: transparent;
+  padding: 0;
+  margin: 0;
+  color: $special-blue-dark-opacity;
+
+  &:hover {
+    background-color: inherit;
+    color: $black;
+  }
+
+  &:active {
+    background-color: inherit;
+    opacity: 0.1;
+  }
+}
+
+.button--less {
+  @include flex;
+  @include flex-center;
+
+  z-index: 2;
+  margin-left: 14px;
+  grid-column: 1 / -1;
+  grid-row: 1;
+  justify-self: start;
+}
+
+.button--more {
+  margin-right: 14px;
+  grid-column: 1 / -1;
+  grid-row: 1;
+  justify-self: end;
 }
 
 .button--minimize {
@@ -283,4 +326,12 @@
   @media (min-width: $desktop-width) {
     min-width: 150px;
   }
+}
+
+.button--previous {
+  padding: 0;
+}
+
+.button--next {
+  padding: 0;
 }
