--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -30,7 +30,8 @@
 }
 
 .page-header--inner {
-  background-color: $basic-blue;
+  // background-color: $basic-blue;
+  padding: 20px 25px 30px 27px;
 
   @media (min-width: $desktop-width) {
     position: relative;
