--- a/source/sass/plans.scss
+++ b/source/sass/plans.scss
@@ -1,7 +1,9 @@
 .plans {
-  padding: 28px 25px 30px 25px;
+  position: relative;
+  top: -25px;
+  padding: 8px 25px 45px 25px;
   background-color: $special-blue-light;
-  border-radius: 26px 26px 0 0;
+  border-radius: 30px 30px 0 0;
   color: $basic-blue-dark;
 
   @media (min-width: $tablet-width) {
@@ -15,6 +17,8 @@
 
 .plans__title {
   @include title--blue;
+
+  margin-bottom: 29px;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -34,7 +38,7 @@
 }
 
 .plans__item {
-  padding: 24px 25px;
+  padding: 9px 25px 24px 24px;
   margin-bottom: 10px;
   border-radius: 10px;
   font-weight: 500;
@@ -52,6 +56,10 @@
   @media (min-width: $desktop-width) {
     @include flex;
   }
+}
+
+.plans__number {
+  margin-right: 6px;
 }
 
 .plans__info {
@@ -96,8 +104,13 @@
   }
 }
 
+.plans__companion {
+  line-height: 1px;
+}
+
 .plans__dates {
   margin-bottom: 24px;
+  line-height: 10px;
 
   @media (min-width: $tablet-width) {
     margin: 0;
@@ -107,4 +120,12 @@
 .plans__button {
   letter-spacing: 0.03em;
   color: $special-black-opacity;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.1;
+  }
 }
