--- a/source/sass/transport-list.scss
+++ b/source/sass/transport-list.scss
@@ -15,4 +15,31 @@
 
 .transport-list__item {
   position: relative;
+  width: 32px;
+  height: 32px;
+  background-color: $white;
+  border-radius: 50%;
+}
+
+.transport-list__label {
+  @include flex;
+  @include flex-center;
+
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  color: $basic-blue-opacity;
+  cursor: pointer;
+
+  &:hover {
+    @include drop-shadow;
+  }
+
+  &:active {
+    background-color: $special-blue-grey-light;
+  }
+}
+
+.transport-list__checkbox:checked + .transport-list__label {
+  color: $basic-blue;
 }
