--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -30,6 +30,7 @@ $special-orange-borders: #ff5c23;
 $special-yellow-grey-borders: #f3c72b;
 $special-blue-grey: #d6daed;
 $special-blue-grey-light: #e2e5f2;
+$special-grey-hover: #959bb2;
 $special-grey-opacity: rgba($special-grey, 0.6);
 $special-black-opacity: rgba($black, 0.3);
 $special-blue-dark-opacity: rgba($basic-blue-dark, 0.3);
@@ -38,6 +39,7 @@ $special-grey-opacity-borders: rgba($special-grey-borders, 0.3);
 
 // shadows
 $popup-shadow: rgba(29, 46, 91, 0.14);
+$input-shadow: rgba(22, 28, 53, 0.17);
 // resolutions
 $mobile-width: 320px;
 $tablet-width: 768px;
