--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -30,8 +30,9 @@
 }
 
 .page-header--inner {
-  // background-color: $basic-blue;
-  padding: 20px 25px 30px 27px;
+  @media (min-width: $mobile-width) and (max-width: 767px) {
+    padding: 20px 25px 30px 27px;
+  }
 
   @media (min-width: $desktop-width) {
     position: relative;
