--- a/source/sass/plans.scss
+++ b/source/sass/plans.scss
@@ -7,7 +7,7 @@
   color: $basic-blue-dark;
 
   @media (min-width: $tablet-width) {
-    padding: 53px 75px 63px 75px;
+    padding: 56px 75px 88px 75px;
   }
 
   @media (min-width: $desktop-width) {
@@ -23,7 +23,7 @@
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    margin-top: 0;
+    margin: 0 0 48px 0;
   }
 }
 
@@ -49,7 +49,7 @@
   background-color: $white;
 
   @media (min-width: $tablet-width) {
-    padding: 40px 40px 14px 40px;
+    padding: 16px 26px 3px 40px;
     flex-basis: 100%;
   }
 
@@ -60,6 +60,13 @@
 
 .plans__number {
   margin-right: 6px;
+
+  @media (min-width: $tablet-width) {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .plans__info {
@@ -72,6 +79,7 @@
     font-size: 20px;
     line-height: 20px;
     letter-spacing: 0.1em;
+    padding-top: 10px;
   }
 
   @media (min-width: $desktop-width) {
@@ -96,6 +104,7 @@
     justify-content: space-between;
     font-size: 24px;
     line-height: 24px;
+    padding-bottom: 11px;
   }
 
   @media (min-width: $desktop-width) {
@@ -106,6 +115,10 @@
 
 .plans__companion {
   line-height: 1px;
+
+  // @media (min-width: $tablet-width) {
+  //   margin-right: 10px;
+  // }
 }
 
 .plans__dates {
@@ -113,6 +126,9 @@
   line-height: 10px;
 
   @media (min-width: $tablet-width) {
+    @include flex;
+
+    width: 44%;
     margin: 0;
   }
 }
