--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -26,6 +26,7 @@ $special-red: #f97676;
 $special-blue: #132576;
 $special-grey-light: #f3f4f8;
 $special-grey-borders: #cbced9;
+$special-icon-grey: #afb0b5;
 $special-orange-borders: #ff5c23;
 $special-yellow-grey-borders: #f3c72b;
 $special-blue-grey: #d6daed;
